# tfbpapi

./: .gitignore  .pre-commit-config.yaml  404.html  example_filter_config.yaml  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: branch.yml  ci.yml
HfCacheManager/: index.html
HfQueryAPI/: index.html
HfRankResponse/: index.html
IncrementalAnalysisDB/: index.html
brentlab_yeastresources_collection/: index.html
datacard/: index.html
datainfo/: index.html
docs/: AbstractAPI.md  AbstractHfAPI.md  AbstractRecordsAndFilesAPI.md  AbstractRecordsOnlyAPI.md  BindingAPI.md  BindingConcatenatedAPI.md  BindingManualQCAPI.md  Cache.md  CallingCardsBackgroundAPI.md  DataSourceAPI.md  ExpressionAPI.md  ExpressionManualQCAPI.md  FileFormatAPI.md  GenomicFeatureAPI.md  HfCacheManager.md  HfQueryAPI.md  HfRankResponse.md  IncrementalAnalysisDB.md  ParamsDict.md  PromoterSetAPI.md  PromoterSetSigAPI.md  RegulatorAPI.md  brentlab_yeastresources_collection.md  datacard.md  datainfo.md  errors.md  fetchers.md  hf_cache_manager.md  huggingface_datacard.md  index.md  metric_arrays.md  models.md  rank_transforms.md  virtual_database_concepts.md  virtual_db.md  virtual_db_configuration.md
docs/tutorials/: DTO_analysis.ipynb  cache_manager_tutorial.ipynb  correlation_tutorial.ipynb  datacard_tutorial.ipynb  filter_resolver_tutorial.ipynb  hfqueryapi_correlation_analysis_tutorial.ipynb  hfqueryapi_tutorial.ipynb  metadata_builder_tutorial.ipynb  metadata_explorer_tutorial.ipynb  metadata_manager_tutorial.ipynb  my_comprehensive_filter.yaml  my_filter_config.yaml  my_metadata_config.yaml  rank_response_tutorial.ipynb  sample_manager_tutorial.ipynb  virtual_db_tutorial.ipynb
errors/: index.html
fetchers/: index.html
hf_cache_manager/: index.html
huggingface_datacard/: index.html
models/: index.html
search/: search_index.json
tfbpapi/: AbstractAPI.py  AbstractHfAPI.py  AbstractRecordsAndFilesAPI.py  AbstractRecordsOnlyAPI.py  BindingAPI.py  BindingConcatenatedAPI.py  BindingManualQCAPI.py  CallingCardsBackgroundAPI.py  DataSourceAPI.py  DtoAPI.py  ExpressionAPI.py  ExpressionManualQCAPI.py  FileFormatAPI.py  GenomicFeatureAPI.py  HfCacheManager.py  HfHu2007Reimand2010API.py  HfQueryAPI.py  HfRankResponse.py  IncrementalAnalysisDB.py  PromoterSetAPI.py  PromoterSetSigAPI.py  RankResponseAPI.py  RankResponseAnalysis.py  RegulatorAPI.py  UnivariateModelsAPI.py  __init__.py  constants.py  datacard.py  datasets.yaml  errors.py  fetchers.py  hf_cache_manager.py  models.py  models_deprecated.py  rank_transforms.py  virtual_db.py
tfbpapi/datainfo/: __init__.py  datacard.py  fetchers.py  filter_resolver.py  metadata_builder.py  metadata_config_models.py  metadata_manager.py  models.py  sample_manager.py
tfbpapi/tests/: conftest.py  test_AbstractAPI.py  test_AbstractHfAPI.py  test_AbstractRecordsAndFilesAPI.py  test_AbstractRecordsOnlyAPI.py  test_Cache.py  test_HfCacheManager.py  test_HfHu2007Reimand2010API.py  (+16 more)
tutorials/: passing_callingcards.csv
virtual_database_concepts/: index.html
virtual_db/: index.html
virtual_db_configuration/: index.html
(+19 files in other folders)
