[tool.poetry]
name = "tfbpapi"
version = "0.0.0"
description = "A collection of classes and functions to facilitate interaction with django.tfbindingandmodeling.com"
authors = ["chasem <chasem@wustl.edu>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
requests = "^2.32.3"
aiohttp = "^3.11.18"
cachetools = "^5.5.2"
scikit-learn = "^1.6.1"
requests-toolbelt = "^1.0.0"
responses = "^0.25.7"
aioresponses = "^0.7.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-snapshot = "^0.9.0"
pytest-asyncio = "^1.3.0"


[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
pythonpath = ['.']
addopts = "--ignore=tmp"

[tool.coverage.run]
include = ["yeastdnnexplorer/**"]
omit = ["*/tests/*", "experiments/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "yeastdnnexplorer",
]
skip = ["venv/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
